2003-06-30  Lutz Mueller <lutz@users.sourceforge.net>

	* sq905.[c,h]: Updates by the author.

2003-06-26  Lutz Mueller <lutz@users.sourceforge.net>

	* *.[c,h]: First check-in. Not functional yet.