@@ -1,5 +1,9 @@
 2003-06-30  Lutz Mueller <lutz@users.sourceforge.net>
 
+	* library.c: Implement downloading of pictures.
+
+2003-06-30  Lutz Mueller <lutz@users.sourceforge.net>
+
 	* sq905.[c,h]: Updates by the author.
 
 2003-06-26  Lutz Mueller <lutz@users.sourceforge.net>
